Add GetShortUrlDetail method and /api/{url_name} endpoint
